vlib/v/parser/tests/fn_alias_arg_variadic_mut_err.out
vlib/v/parser/tests/fn_alias_arg_variadic_mut_err.vv:1:22: error: variadic arguments cannot be `mut`, `shared` or `atomic`
    1 | type Foo = fn(mut ...string)
      |                      ~~~~~~
