vlib/v/parser/tests/fn_alias_arg_variadic_mut_err.vv
type Foo = fn(mut ...string)
